[project]
name = "qixuema"
version = "0.0.8"
requires-python = ">=3.11"
description = "Shared utilities"
readme = "README.md"
authors = [{ name = "Xueqi Ma", email = "qixuemaa@gmail.com" }]
dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.0",
    "packaging>=21.0",
    "deprecated>=1.2.14",
    "numpy", # 1.26.0 for open3d
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qixuema"]
